# topcoder-de6ed3dc-7afc-40e6-a2df-64e027f3221e

./: Cargo.toml  README.md  Rocket.toml
2-translations-lib/: Cargo.toml  simpleserver.py
2-translations-lib/src/: google.rs  lib.rs
rust/1-simple-web-form/src/: main.rs  survey_form.rs
rust/3-translations-lib/: Cargo.toml  Makefile  README.md
rust/3-translations-lib/src/: deepl.rs  google.rs
simple-web-form/: Cargo.toml  Dockerfile  README.md
simple-web-form/src/: routes.rs
simple-web-form/src/templates/: index.tera
src/: basic_auth.rs  basic_auth_middleware.rs  catchers.rs  main.rs  routes.rs
src/templates/: index.tera  survey.tera
