[package]
name = "topcoder-de6ed3dc-7afc-40e6-a2df-64e027f3221e"
version = "0.1.0"
authors = ["chrisweaver1 <chris.weaver.work@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
tera = "1.7.0"
base64 = "0.13.0"
http = "0.2.4" 

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["handlebars_templates", "tera_templates"]