[package]
name = "translations-lib"
version = "0.1.0"
authors = ["chrisweaver1 <chris.weaver.work@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
futures = "0.3"
async-trait = "0.1.49"
reqwest = { version = "0.11.2", features = ["json"] }
tokio = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0.125", features = ["derive"] }